--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,22 @@
   }
 }
 
+/* custom-tree.css */
+
+.node__root > circle {
+  fill: red;
+}
+
+.node__branch > circle {
+  fill: yellow;
+}
+
+.node__leaf > circle {
+  fill: green;
+  /* Let's also make the radius of leaf nodes larger */
+  r: 40;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
